htdoc/css/cs1520.css
body {
  width: 100%;
  height: 100%;
}

html {
  width: 100%;
  height: 100%;
}

a, .red-txt {
  color: #a94442;
}

.bold {
  font-weight: bold;
}

.centered {
  text-align: center;
}

.uc {
  text-transform: uppercase;
}

.und {
  text-decoration: underline;
}

.large-strong {
  font-size: 30px;
  text-transform: uppercase;
}

.med {
  font-size: 18px;
  text-transform: uppercase;
}

.stars {
  color: #a94442;
  margin-top: 10px;
}

.lg-star {
  font-size: large;
}

.sep {
  border-color: #a94442;
  width: 30%;
}

.sm-sep {
  border-color: #a94442;
  width: 10%;
}

.quote {
  font-style: italic;
  font-family: Georgia, serif;
}

ul {
  list-style: none;
  padding: 0;
}

.navbar {
  background: #000;
}

.navbar-default .navbar-brand {
  color: #a94442;
}

.navbar-default .navbar-brand:hover {
  color: #a94442;
}

.navbar-default .navbar-brand:focus {
  color: #a94442;
}

.navbar-default .navbar-nav > li > a:hover {
  color: #fff;
}

.navbar-default .navbar-nav > .active > a {
  color: #ccc;
  background-color: #a94442;
}

.navbar-default .navbar-nav > li.active {
  background-color: #a94442;
}

.navbar-default .navbar-nav > li.active:hover {
  background-color: #a94442;
}

.navbar-default .navbar-nav > li.active > a:hover {
  color: #ccc;
  background-color: #a94442;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus {
  color: #ccc;
  background-color: #a94442;
}

.glyphicon-envelope {
  top: 3px;
}

h1, h3 {
  color: #a94442;
}

.last-row {
  margin-bottom: 20px;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.b-ten {
  margin-bottom: 10px;
}

.nav-spacing {
  padding-bottom: 150px;
}

@media(min-width:767px) {
  .navbar {
    padding: 20px 0;
    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
    transition: background .5s ease-in-out,padding .5s ease-in-out;
  }

  .top-nav-collapse {
    padding: 0;
  }
}

.intro-section {
  height: auto;
  padding-top: 150px;
  background: #eee;
  border-bottom: 4px solid #a94442;
}

.content-section {
  height: auto;
  padding-top: 100px;
  padding-bottom: 20px;
}

.content-section:nth-child(odd) {
  background: #ccc;
  border-bottom: 4px solid #a94442;
}

.content-section:nth-child(even) {
  background: #eee;
  border-bottom: 4px solid #a94442;
}

.info-bubble {
  border: 3px solid #333;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  padding: 10px;
}

.info-bubble .info-date {
  color: #333;
  border-left: 3px solid #333;
  text-align: left;
  padding-left: 10px;
  margin-bottom: 10px;
  font-weight: bold;
}

.info-bubble .info {
  color: #333;
  text-align: left;
  padding-bottom: 5px;
}

.syl-list {
  margin-bottom: 10px;
}

.syl-list .syl-title {
  text-transform: uppercase;
  font-weight: bold;
}

.syl-list .syl-item {

}

.ex-list li {
  text-align: left;
  list-style-type: disc;
  margin-left: 20px;
}

.ex-list .requirements {
  text-transform: uppercase;
  list-style: none;
  margin-left: 0;
  font-weight: bold;
}

.panel-title a {
  text-decoration: none;
}

